--- a/index.html
+++ b/index.html
@@ -1,7 +1,140 @@
-<!DOCTYPE HTML>
-<html>
-  <body>
-    <h1>PAGE INCOMPLETE</h1>
-    <p>this page will be importantlater on, please check back to see if it's ready to use.</p>
-  </body>
-</html>
+<html><head>
+		<title>spacewd69.github.io games</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+		<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,700;1,400;1,700&amp;display=swap" rel="stylesheet">
+		<meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="some shit by SpaceWD">
+        <meta name="keywords" content="spacewd, scratch, club, penguin, fuck, this, shit, im-out">
+        <meta name="url" content="https://spacewd69.github.io/games">
+        <meta name="author" content="spacewd">
+        <meta property="og:title" content="spacewd69.github.io games">
+        <meta property="og:locale" content="en-US">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://spacewd69.github.io/games">
+        <meta property="og:image" content="https://spacewd69.github.io/images.jpeg">
+        <meta property="og:description" content="some shit by SpaceWD">
+		<link type="image/x-icon" rel="shortcut icon" href="https://penguingame-launcher.spacewd.repl.co/favicon.ico">
+        <style type="text/css">
+			
+			body {
+				color: white;
+				margin: 0px;
+				font-family: 'Ubuntu', sans-serif;
+				background-image: url("https://spacewd69.github.io/images.jpeg");
+				background-size: cover;
+				background-position: center;
+				text-align: center;
+				height: 100vh;
+			}
+			#games_list {
+				padding: 5vh 10vw
+			}
+			.game {
+				width: 200px;
+				height: 150px;
+				margin: 45px;
+				display: inline-block;
+				position: relative;
+			}
+			.game_shadow {
+				position: absolute;
+				background-color: #00000088;
+				top: -4.5px;
+				left: -4.5px;
+				bottom: -4.5px;
+				right: -4.5px;
+				border-radius:3px;
+				transition: top 0.2s linear, left 0.2s linear, bottom 0.2s linear, right 0.2s linear;
+			}
+			.game_shadow:hover {
+				top: -5.5px;
+				left: -5.5px;
+				bottom: -5.5px;
+				right: -5.5px;
+			}
+			.game_shadow:active {
+				top: -5.5px;
+				left: -5.5px;
+				bottom: -5.5px;
+				right: -5.5px;
+			}
+			.game_solid {
+				width: 210px;
+				height: 130px;
+				border: 2.5px solid #333344;
+				padding: 15px 0px;
+				background-image: url("tile.jpg");
+				background-size: cover;
+				position: absolute;
+				bottom: 4.5px;
+				right: 4.5px;
+				border-radius:3px;
+				transition: bottom 0.2s linear, right 0.2s linear;
+			}
+			.game_solid img {
+				border: 4px solid #333355;
+				border-radius: 4px;
+			}
+			.game_shadow:hover .game_solid, .game_solid:hover {
+				bottom: 8.5px;
+				right: 8.5px;
+			}
+			.game_shadow:active .game_solid, .game_solid:active {
+				bottom: 5.5px;
+				right: 5.5px;
+			}
+			.no_link {
+				text-decoration: none !important;
+				color: white !important;
+			}
+		</style>
+		<script type="text/javascript">
+		window.addEventListener("load", () => {
+			document.getElementById("copyright").innerHTML = "&nbsp;(copyright &copy; 2023 - " + (new Date()).getFullYear() + " SpaceWD. fuck you.)&nbsp;";
+		});
+		</script>
+	</head>
+	<body>
+		<div style="height:5vh;"></div>
+		<h1 style="font-size:2.5em;background-color:#444455cc;padding:15px 30px;border-radius:5px;margin:auto;display:inline-block;">
+			spacewd69.github.io games
+		</h1>
+		<div id="games_list">
+			<div class="game">
+				<div class="game_shadow">
+					<a href="https://spaceblog.neocities.org/games/carl" target="_blank" class="no_link">
+						<div class="game_solid">
+							<img src="fnaw.jpg" width="150" height="100" rel="Carl">
+							<h4 style="font-size:15px;margin-top:12px;"><span style="background-color:#333344dd;padding:3px;border-radius:3px;">&nbsp;Carl&nbsp;</span></h4>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="game">
+				<div class="game_shadow">
+					<a href="icefishing/" target="_blank" class="no_link">
+						<div class="game_solid">
+							<img src="eaglercraftalt2.jpg" width="150" height="100" rel="ice fishing">
+							<h4 style="font-size:15px;margin-top:12px;"><span style="background-color:#333344dd;padding:3px;border-radius:3px;">&nbsp;Ice Fishing&nbsp;</span></h4>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="game">
+				<div class="game_shadow">
+					<a href="https://scratch.mit.edu/user/TwistedBread_Games" target="_blank" class="no_link">
+						<div class="game_solid">
+							<img src="eaglercraft_singleplayer.jpg" width="150" height="100" rel="scratch games">
+							<h4 style="font-size:15px;margin-top:12px;"><span style="background-color:#333344dd;padding:3px;border-radius:3px;">&nbsp;My Scratch Games&nbsp;</span></h4>
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>
+		<div style="font-size:1em;position:fixed;left:0px;right:0px;bottom:5px;padding:3px;">
+			<p style="background-color:#00000055;padding:3px;display:inline-block;margin:auto;" id="copyright">&nbsp;(copyright © 2023 - 2023 SpaceWD. fuck you.)&nbsp;</p>
+		</div>
+	
+</body><div style="background: rgba(50, 131, 168, 0.5); position: absolute; z-index: 2147483647; height: 0px; width: 0px; top: 0px; left: 0px;"></div></html>
