--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 				<div class="game_shadow">
 					<a href="icefishing/" target="_blank" class="no_link">
 						<div class="game_solid">
-							<img src="eaglercraftalt2.jpg" width="150" height="100" rel="ice fishing">
+							<img src="icefishing.jpg" width="150" height="100" rel="ice fishing">
 							<h4 style="font-size:15px;margin-top:12px;"><span style="background-color:#333344dd;padding:3px;border-radius:3px;">&nbsp;Ice Fishing&nbsp;</span></h4>
 						</div>
 					</a>
