--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			body {
 				color: white;
 				margin: 0px;
-				font-family: 'Ubuntu', sans-serif;
+				font-family: 'Arial', sans-serif;
 				background-image: url("https://spacewd69.github.io/images.jpeg");
 				background-size: cover;
 				background-position: center;
