--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 		<title>spacewd69.github.io games</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-		<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,700;1,400;1,700&amp;display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Arial:ital,wght@0,400;0,700;1,400;1,700&amp;display=swap" rel="stylesheet">
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="some shit by SpaceWD">
