--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				<div class="game_shadow">
 					<a href="https://spaceblog.neocities.org/games/carl" target="_blank" class="no_link">
 						<div class="game_solid">
-							<img src="fnaw.jpg" width="150" height="100" rel="Carl">
+							<img src="https://spacewd69.github.io/images.jpeg" width="150" height="100" rel="Carl">
 							<h4 style="font-size:15px;margin-top:12px;"><span style="background-color:#333344dd;padding:3px;border-radius:3px;">&nbsp;Carl&nbsp;</span></h4>
 						</div>
 					</a>
