--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				<div class="game_shadow">
 					<a href="https://scratch.mit.edu/user/TwistedBread_Games" target="_blank" class="no_link">
 						<div class="game_solid">
-							<img src="eaglercraft_singleplayer.jpg" width="150" height="100" rel="scratch games">
+							<img src="https://scratch.mit.edu/favicon.ico" width="150" height="100" rel="scratch games">
 							<h4 style="font-size:15px;margin-top:12px;"><span style="background-color:#333344dd;padding:3px;border-radius:3px;">&nbsp;My Scratch Games&nbsp;</span></h4>
 						</div>
 					</a>
