--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 			</div>
 			<div class="game">
 				<div class="game_shadow">
-					<a href="icefishing.html" target="_blank" class="no_link">
+					<a href="icefishing/" target="_blank" class="no_link">
 						<div class="game_solid">
 							<img src="icefishing.jpg" width="150" height="100" rel="ice fishing">
 							<h4 style="font-size:15px;margin-top:12px;"><span style="background-color:#333344dd;padding:3px;border-radius:3px;">&nbsp;Ice Fishing&nbsp;</span></h4>
