--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="some shit by SpaceWD">
-        <meta name="keywords" content="spacewd, scratch, club, penguin, fuck, this, shit, im-out">
+        <meta name="keywords" content="spacewd, scratch, club, penguin, flip, this, crap, im-out">
         <meta name="url" content="https://spacewd69.github.io/games">
         <meta name="author" content="spacewd">
         <meta property="og:title" content="spacewd69.github.io games">
