--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Arial:ital,wght@0,400;0,700;1,400;1,700&amp;display=swap" rel="stylesheet">
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="some shit by SpaceWD">
+        <meta name="description" content="some crap by SpaceWD">
         <meta name="keywords" content="spacewd, scratch, club, penguin, flip, this, crap, im-out">
         <meta name="url" content="https://spacewd69.github.io/games">
         <meta name="author" content="spacewd">
@@ -14,7 +14,7 @@
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://spacewd69.github.io/games">
         <meta property="og:image" content="https://spacewd69.github.io/images.jpeg">
-        <meta property="og:description" content="some shit by SpaceWD">
+        <meta property="og:description" content="some crap by SpaceWD">
 		<link type="image/x-icon" rel="shortcut icon" href="https://penguingame-launcher.spacewd.repl.co/favicon.ico">
         <style type="text/css">
 			
