--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
 				text-align: center;
 				height: 100vh;
 			}
+		        a {
+                                cursor: url("https://media.discordapp.net/attachments/1105303024617918534/1125266484055257088/Untitled254_20230702232401.png"), default;
+                        }
+
+                        a img {
+                                cursor: url("https://media.discordapp.net/attachments/1105303024617918534/1125266484055257088/Untitled254_20230702232401.png"), default;
+                        }
 			#games_list {
 				padding: 5vh 10vw
 			}
