--- a/icefishing.html
+++ b/icefishing.html
@@ -9,7 +9,7 @@
 <body>
     <script>
         var gameConfig = {
-            swfUrl: "https://media1.spacewd.repl.co/play/v2/games/fish/bootstrap.swf"
+            swfUrl: "https://media.clubpenguin.picpps.com/boots.swf"
         }
     </script>
     <div id="waflashContainer">
