--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head>
-		<title>spacewd69.github.io games</title>
+		<title>spacewd.is-a.dev games</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 		<link href="https://fonts.googleapis.com/css2?family=Arial:ital,wght@0,400;0,700;1,400;1,700&amp;display=swap" rel="stylesheet">
@@ -7,22 +7,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="some crap by SpaceWD">
         <meta name="keywords" content="spacewd, scratch, club, penguin, flip, this, crap, im-out">
-        <meta name="url" content="https://spacewd69.github.io/games">
+        <meta name="url" content="https://spacewd.is-a.dev/games">
         <meta name="author" content="spacewd">
-        <meta property="og:title" content="spacewd69.github.io games">
+        <meta property="og:title" content="spacewd.is-a.dev games">
         <meta property="og:locale" content="en-US">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://spacewd69.github.io/games">
-        <meta property="og:image" content="https://spacewd69.github.io/images.jpeg">
+        <meta property="og:url" content="https://spacewd.is-a.dev/games">
+        <meta property="og:image" content="https://spacewd.is-a.dev/images.jpeg">
         <meta property="og:description" content="some crap by SpaceWD">
-		<link type="image/x-icon" rel="shortcut icon" href="https://penguingame-launcher.spacewd.repl.co/favicon.ico">
+		<link type="image/x-icon" rel="shortcut icon" href="https://spacewd.is-a.dev/images.jpg">
         <style type="text/css">
 			
 			body {
 				color: white;
 				margin: 0px;
 				font-family: 'Arial', sans-serif;
-				background-image: url("https://spacewd69.github.io/images.jpeg");
+				background-image: url("https://spacewd.is-a.dev/images.jpeg");
 				background-size: cover;
 				background-position: center;
 				text-align: center;
@@ -111,10 +111,10 @@
 		<div id="games_list">
 			<div class="game">
 				<div class="game_shadow">
-					<a href="icefishing/" target="_blank" class="no_link">
+					<a href="" target="_blank" class="no_link">
 						<div class="game_solid">
 							<img src="icefishing.jpg" width="150" height="100" rel="ice fishing">
-							<h4 style="font-size:15px;margin-top:12px;"><span style="background-color:#333344dd;padding:3px;border-radius:3px;">&nbsp;Ice Fishing&nbsp;</span></h4>
+							<h4 style="font-size:15px;margin-top:12px;"><span style="background-color:#333344dd;padding:3px;border-radius:3px;">&nbsp;Ice Fishing (FIXING)&nbsp;</span></h4>
 						</div>
 					</a>
 				</div>
