--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
 		</style>
 		<script type="text/javascript">
 		window.addEventListener("load", () => {
-			document.getElementById("copyright").innerHTML = "&nbsp;(copyright &copy; 2023 - " + (new Date()).getFullYear() + " SpaceWD. fuck you.)&nbsp;";
+			document.getElementById("copyright").innerHTML = "&nbsp;(copyright &copy; 2023 - " + (new Date()).getFullYear() + " SpaceWD. screw you.)&nbsp;";
 		});
 		</script>
 	</head>
 	<body>
 		<div style="height:5vh;"></div>
 		<h1 style="font-size:2.5em;background-color:#444455cc;padding:15px 30px;border-radius:5px;margin:auto;display:inline-block;">
-			spacewd69.github.io games
+			spacewd.is-a.dev games
 		</h1>
 		<div id="games_list">
 			<div class="game">
@@ -131,7 +131,7 @@
 			</div>
 		</div>
 		<div style="font-size:1em;position:fixed;left:0px;right:0px;bottom:5px;padding:3px;">
-			<p style="background-color:#00000055;padding:3px;display:inline-block;margin:auto;" id="copyright">&nbsp;(copyright © 2023 - 2023 SpaceWD. fuck you.)&nbsp;</p>
+			<p style="background-color:#00000055;padding:3px;display:inline-block;margin:auto;" id="copyright">&nbsp;(copyright © 2023 - 2023 SpaceWD. screw you.)&nbsp;</p>
 		</div>
 	
 </body><div style="background: rgba(50, 131, 168, 0.5); position: absolute; z-index: 2147483647; height: 0px; width: 0px; top: 0px; left: 0px;"></div></html>
