--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 			</div>
 			<div class="game">
 				<div class="game_shadow">
-					<a href="" target="_blank" class="no_link">
+					<a href="supra-mayro-bross.html" target="_blank" class="no_link">
 						<div class="game_solid">
 							<img src="artworks-000224243662-1vo619-t500x500.jpg" width="150" height="100" rel="supra mayro bross">
 							<h4 style="font-size:15px;margin-top:12px;"><span style="background-color:#333344dd;padding:3px;border-radius:3px;">&nbsp;Supra Mayro Bross&nbsp;</span></h4>
