--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         }
 
                         a img {
-                                cursor: url("https://media.discordapp.net/attachments/1105303024617918534/1125266484055257088/Untitled254_20230702232401.png"), default;
+                                cursor: url("Screenshot_20230906_172911_Memasik.webp"), default;
                         }
 			#games_list {
 				padding: 5vh 10vw
@@ -72,7 +72,7 @@
 				height: 130px;
 				border: 2.5px solid #333344;
 				padding: 15px 0px;
-				background-image: url("tile.jpg");
+				background-image: url("Screenshot_20230906_172911_Memasik.webp");
 				background-size: cover;
 				position: absolute;
 				bottom: 4.5px;
