--- a/index.html
+++ b/index.html
@@ -15,25 +15,22 @@
         <meta property="og:url" content="https://spacewd.is-a.dev/games">
         <meta property="og:image" content="https://spacewd.is-a.dev/images.jpeg">
         <meta property="og:description" content="some crap by SpaceWD">
-		<link type="image/x-icon" rel="shortcut icon" href="https://spacewd.is-a.dev/images.jpg">
+		<link type="image/x-icon" rel="shortcut icon" href="https://spacewd.is-a.dev/games/Screenshot_20230906_172911_Memasik.webp">
         <style type="text/css">
 			
 			body {
 				color: white;
 				margin: 0px;
 				font-family: 'Arial', sans-serif;
-				background-image: url("https://spacewd.is-a.dev/images.jpeg");
+				background-image: url("https://spacewd.is-a.dev/games/Screenshot_20230906_172911_Memasik.webp");
 				background-size: cover;
 				background-position: center;
 				text-align: center;
 				height: 100vh;
 			}
-		        a {
-                                cursor: url("https://media.discordapp.net/attachments/1105303024617918534/1125266484055257088/Untitled254_20230702232401.png"), default;
-                        }
-
+		
                         a img {
-                                cursor: url("Screenshot_20230906_172911_Memasik.webp"), default;
+                                cursor: url("https://spacewd.is-a.dev/games/Screenshot_20230906_172911_Memasik.webp"), default;
                         }
 			#games_list {
 				padding: 5vh 10vw
