--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta property="og:url" content="https://spacewd.is-a.dev/games">
         <meta property="og:image" content="https://spacewd.is-a.dev/images.jpeg">
         <meta property="og:description" content="some crap by SpaceWD">
-		<link type="image/x-icon" rel="shortcut icon" href="https://spacewd.is-a.dev/games/Screenshot_20230906_172911_Memasik.webp">
+		<link type="image/x-icon" rel="shortcut icon" href="https://spacewd.is-a.dev/games/icon32.png">
         <style type="text/css">
 			
 			body {
@@ -30,7 +30,7 @@
 			}
 		
                         a img {
-                                cursor: url("https://spacewd.is-a.dev/games/Screenshot_20230906_172911_Memasik.webp"), default;
+                                cursor: url("https://spacewd.is-a.dev/games/icon32.png"), default;
                         }
 			#games_list {
 				padding: 5vh 10vw
