--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				height: 130px;
 				border: 2.5px solid #333344;
 				padding: 15px 0px;
-				background-image: url("Screenshot_20230906_172911_Memasik.webp");
+				background-image: url("icon32.png");
 				background-size: cover;
 				position: absolute;
 				bottom: 4.5px;
