--- a/supra-mayro-kratt.html
+++ b/supra-mayro-kratt.html
@@ -1,2 +1,2 @@
-<iframe src="https://i.simmer.io/@PrestonR2010/supra-mayro-krat" width="560" height="560"></iframe>
+<iframe src="https://i.simmer.io/@PrestonR2010/supra-mayro-krat" frameBorder="0" allowFullscreen="true"></iframe>
 <script>alert("this webpage honors and thanks PrestonR2010 for making this real, without you, this game wouldnt be on my website today, grateful for ya, bud")</script>
